--- a/index.pug
+++ b/index.pug
@@ -4,6 +4,8 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="color-scheme" ,content="light")
+    meta(name="supported-color-schemes" ,content="light")
     style
       include components.css
       include containers.css
@@ -13,18 +15,18 @@ html(lang="en")
       tr.show-in-browser 
         td.content.gray-bg
           span
-            a(href="#",class="gray-text") Zobrazte si newsletter v prohlížeči
+            a(href="http://",class="gray-text") Zobrazte si newsletter v prohlížeči
       tr
         td
           table.hero
             tr.hero-header
               td.logo
-                img(src="/images/jic-logo.png")
+                img(src=`${apiUrl}/images/jic-logo.png`)
               td.date.content
                 span.caption květen 2022
             tr
               td(colspan="2", class="content hero-content layout")
-                h1.section-header Zaří patří Velvet Innovation 
+                h1 Září patří Velvet Innovation 
                 p.body-text Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek
                 h4.body-header Top výběr z newsletteru
                 ul
@@ -36,46 +38,46 @@ html(lang="en")
           table.section
             tr.section-top
               td
-                img(src="images/noise-pink.png")
+                img(src=`${apiUrl}/images/noise-pink.png`)
             tr
               td.section-body.pink-bg
-                img(src="images/magazine-header.png", class="section-header")
+                img(src=`${apiUrl}/images/magazine-header.png`, class="section-header")
                 table.grid
                   tr
                     td(class="grid-item-big", colspan="2")
-                      a(href="#")
-                        img(src="images/placeholder.png")
+                      a(href="http://")
+                        img(src=`${apiUrl}/images/placeholder.png`)
                         div.content
                           span.tag jic talk
                           h1 Nadpis lorem ipsum
                           p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                   tr
                     td.grid-item-small
-                      a(href="#")
+                      a(href="http://")
                         div.content
                           span.tag jic talk
                           h4 Nadpis lorem ipsum
                           p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                     td.grid-item-small
-                      a(href="#")
+                      a(href="http://")
                         div.content
                           span.tag jic talk
                           h4 Nadpis lorem ipsum
                           p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                   tr
                     td(colspan="2")
-                      a(class="btn-secondary", href="#") 
+                      a(class="btn-secondary", href="http://") 
                         span všechny články
-                        img(src="images/arrow.png")
+                        img(src=`${apiUrl}/images/arrow.png`)
           table.section
             tr
               td.section-body.yellow-bg
-                img(src="images/events-header.png", class="section-header")
+                img(src=`${apiUrl}/images/events-header.png`, class="section-header")
                 table.grid
                   tr
                     td(class="grid-item-big", colspan="2")
-                      a(href="#")
-                        img(src="images/placeholder.png")
+                      a(href="http://")
+                        img(src=`${apiUrl}/images/placeholder.png`)
                         div.content
                           span.tag jic talk
                           h1 Nadpis lorem ipsum
@@ -85,7 +87,7 @@ html(lang="en")
                             span brno-medlánky
                   tr
                     td.grid-item-small
-                      a(href="#")
+                      a(href="http://")
                         div.content
                           span.tag jic talk
                           h4 Nadpis lorem ipsum
@@ -94,7 +96,7 @@ html(lang="en")
                             span 19. 2. 2022, 19 – 21 hod.
                             span brno-medlánky
                     td.grid-item-small
-                      a(href="#")
+                      a(href="http://")
                         div.content
                           span.tag jic talk
                           h4 Nadpis lorem ipsum
@@ -104,13 +106,13 @@ html(lang="en")
                             span brno-medlánky
                   tr
                     td(colspan="2")
-                      a(class="btn-secondary", href="#") 
+                      a(class="btn-secondary", href="http://") 
                         span všechny akce
-                        img(src="images/arrow.png")
+                        img(src=`${apiUrl}/images/arrow.png`)
           table.section
             tr
               td.section-body.blue-bg
-                img(src="images/pelmel-header.png", class="section-header big")
+                img(src=`${apiUrl}/images/pelmel-header.png`, class="section-header big")
                 table.grid
                   tr
                     td(class="pelmel", colspan="2")
@@ -133,29 +135,29 @@ html(lang="en")
           table.section
             tr
               td.section-body.gray-bg
-                img(src="images/startup-header.png", class="section-header big")
+                img(src=`${apiUrl}/images/startup-header.png`, class="section-header big")
                 table.grid
                   tr
                     td.content
-                      a(class="startup-item", href="#")
+                      a(class="startup-item", href="http://")
                         h4 Nadpis lorem ipsum
                         p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                      a(class="startup-item", href="#")
+                      a(class="startup-item", href="http://")
                         h4 Nadpis lorem ipsum
                         p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                      a(class="startup-item", href="#")
+                      a(class="startup-item", href="http://")
                         h4 Nadpis lorem ipsum
                         p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
           table.section
             tr
               td.section-body.green-bg
-                img(src="images/advices-header.png", class="section-header")
+                img(src=`${apiUrl}/images/advices-header.png`, class="section-header")
                 table.grid
                   tr
                     td
-                      img(src="/images/placeholder.png")
+                      img(src=`${apiUrl}/images/placeholder.png`)
                       div.quote.content
-                        img(src="/images/quotes.png", class="quotes")
+                        img(src=`${apiUrl}/images/quotes.png`, class="quotes")
                         p.big Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět. Tvoříme otevřený inovační ekosystém, který je domovem globálně úspěšných podnikatelů a inspiruje svět.
                         h3 Petr Chládek
                         span Ředitel JIC
@@ -164,52 +166,52 @@ html(lang="en")
           a(href="http://", class="blockquote") 
             h2 Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
             div(class="btn") 
-              img(src="/images/btn-side.png")
+              img(src=`${apiUrl}/images/btn-side.png`)
               div Zjistit více
-              img(src="/images/btn-side.png")
+              img(src=`${apiUrl}/images/btn-side.png`)
       tr
         td.layout
           a(href="http://", class="figure-banner") 
-            img(src="images/placeholder.png")
+            img(src=`${apiUrl}/images/placeholder.png`)
             div.content
               h1 Nadpis textového bloku
               p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
             div(class="btn") 
-              img(src="/images/btn-side.png")
+              img(src=`${apiUrl}/images/btn-side.png`)
               div Zjistit více
-              img(src="/images/btn-side.png")
+              img(src=`${apiUrl}/images/btn-side.png`)
           a(href="http://", class="figure-banner") 
             div.content
               h1 Nadpis textového bloku
               p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
             div(class="btn") 
-              img(src="/images/btn-side.png")
+              img(src=`${apiUrl}/images/btn-side.png`)
               div Zjistit více
-              img(src="/images/btn-side.png")
+              img(src=`${apiUrl}/images/btn-side.png`)
       tr
         td.footer
           div.violet-bg
-            img(src="images/contact-header.png", class="section-header big")
+            img(src=`${apiUrl}/images/contact-header.png`, class="section-header big")
             p.white-text Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na 
-              a(href="#") marketing@jic.cz
+              a(href="http://") marketing@jic.cz
             table.socials
               tr
                 td
                   a(href="http://") 
-                    img(src="/images/fb.png")
+                    img(src=`${apiUrl}/images/fb.png`)
                 td
                   a(href="http://") 
-                    img(src="/images/in.png")
+                    img(src=`${apiUrl}/images/in.png`)
                 td
                   a(href="http://") 
-                    img(src="/images/ig.png")
+                    img(src=`${apiUrl}/images/ig.png`)
                 td
                   a(href="http://") 
-                    img(src="/images/yt.png")
+                    img(src=`${apiUrl}/images/yt.png`)
                 td
                   a(href="http://") 
-                    img(src="/images/tw.png")
-          img(src="/images/noise-violet.png")
+                    img(src=`${apiUrl}/images/tw.png`)
+          img(src=`${apiUrl}/images/noise-violet.png`)
   a(href="http://", class="unsub violet-text") Pro odhlášení z odběru newsletteru klikněte zde
 
 
