--- a/index.pug
+++ b/index.pug
@@ -75,11 +75,11 @@ html(lang="en")
           table.section
             tr
               td
-                img(src=`${apiUrl}/images/noise-blue.png`, class="section-noise")
-                div.diff
-                  div.screen
-                    div.section-header-outer.blue-bg
-                      img(src=`${apiUrl}/images/events-header.png`, class="section-header")
+                img(src=`${apiUrl}/images/noise-yellow.png`, class="section-noise")
+                div.section-header-outer.yellow-bg
+                  div.diff
+                    div.screen
+                        img(src=`${apiUrl}/images/events-header.png`, class="section-header")
             tr
               td.section-body
                 table.grid
@@ -120,8 +120,14 @@ html(lang="en")
                         img(src=`${apiUrl}/images/arrow.png`)
           table.section
             tr
-              td.section-body.blue-bg
-                img(src=`${apiUrl}/images/pelmel-header.png`, class="section-header big")
+              td
+                img(src=`${apiUrl}/images/noise-blue.png`, class="section-noise")
+                div.section-header-outer.blue-bg
+                  div.diff
+                    div.screen
+                      img(src=`${apiUrl}/images/pelmel-header.png`, class="section-header big")
+            tr
+              td.section-body
                 table.grid
                   tr
                     td(class="pelmel", colspan="2")
@@ -143,8 +149,14 @@ html(lang="en")
                         h4 Solitea zase nakupuje
           table.section
             tr
+              td
+                img(src=`${apiUrl}/images/noise-gray.png`, class="section-noise")
+                div.section-header-outer.gray-bg
+                  div.diff
+                    div.screen
+                      img(src=`${apiUrl}/images/startup-header.png`, class="section-header big")
+            tr
               td.section-body.gray-bg
-                img(src=`${apiUrl}/images/startup-header.png`, class="section-header big")
                 table.grid
                   tr
                     td.content
