--- a/index.pug
+++ b/index.pug
@@ -171,8 +171,14 @@ html(lang="en")
                         p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
           table.section
             tr
-              td.section-body.green-bg
-                img(src=`${apiUrl}/images/advices-header.png`, class="section-header")
+              td
+                img(src=`${apiUrl}/images/noise-green.png`, class="section-noise")
+                div.section-header-outer.green-bg
+                  div.diff
+                    div.screen
+                      img(src=`${apiUrl}/images/advices-header.png`, class="section-header")
+            tr
+              td.section-body
                 table.grid
                   tr
                     td
