--- a/index.pug
+++ b/index.pug
@@ -127,7 +127,7 @@ html(lang="en")
                     div.screen
                       img(src=`${apiUrl}/images/pelmel-header.png`, class="section-header big")
             tr
-              td.section-body
+              td.section-body.margin
                 table.grid
                   tr
                     td(class="pelmel", colspan="2")
@@ -156,7 +156,7 @@ html(lang="en")
                     div.screen
                       img(src=`${apiUrl}/images/startup-header.png`, class="section-header big")
             tr
-              td.section-body.gray-bg
+              td.section-body.margin
                 table.grid
                   tr
                     td.content
