--- a/index.pug
+++ b/index.pug
@@ -38,11 +38,7 @@ html(lang="en")
           table.section
             tr.section-top
               td
-                img(src=`${apiUrl}/images/noise-pink.png`, class="section-noise")
-                div.section-header-outer.pink-bg
-                  div.diff
-                    div.screen
-                      img(src=`${apiUrl}/images/magazine-header.png`, class="section-header")
+                img(src=`${apiUrl}/images/magazine-header.png`, class="section-header")
             tr
               td.section-body
                 table.grid
@@ -75,11 +71,7 @@ html(lang="en")
           table.section
             tr
               td
-                img(src=`${apiUrl}/images/noise-yellow.png`, class="section-noise")
-                div.section-header-outer.yellow-bg
-                  div.diff
-                    div.screen
-                        img(src=`${apiUrl}/images/events-header.png`, class="section-header")
+                img(src=`${apiUrl}/images/header-events.png`, class="section-header")
             tr
               td.section-body
                 table.grid
@@ -121,11 +113,7 @@ html(lang="en")
           table.section
             tr
               td
-                img(src=`${apiUrl}/images/noise-blue.png`, class="section-noise")
-                div.section-header-outer.blue-bg
-                  div.diff
-                    div.screen
-                      img(src=`${apiUrl}/images/pelmel-header.png`, class="section-header big")
+                img(src=`${apiUrl}/images/header-pelmel.png`, class="section-header big")
             tr
               td.section-body.margin
                 table.grid
@@ -150,11 +138,7 @@ html(lang="en")
           table.section
             tr
               td
-                img(src=`${apiUrl}/images/noise-gray.png`, class="section-noise")
-                div.section-header-outer.gray-bg
-                  div.diff
-                    div.screen
-                      img(src=`${apiUrl}/images/startup-header.png`, class="section-header big")
+                img(src=`${apiUrl}/images/header-startup.png`, class="section-header big")
             tr
               td.section-body.margin
                 table.grid
@@ -172,11 +156,7 @@ html(lang="en")
           table.section
             tr
               td
-                img(src=`${apiUrl}/images/noise-green.png`, class="section-noise")
-                div.section-header-outer.green-bg
-                  div.diff
-                    div.screen
-                      img(src=`${apiUrl}/images/advices-header.png`, class="section-header")
+                img(src=`${apiUrl}/images/header-advices.png`, class="section-header")
             tr
               td.section-body
                 table.grid
