--- a/index.pug
+++ b/index.pug
@@ -38,7 +38,7 @@ html(lang="en")
           table.section
             tr.section-top
               td
-                img(src=`${apiUrl}/images/magazine-header.png`, class="section-header")
+                img(src=`${apiUrl}/images/header-magazine.png`, class="section-header")
             tr
               td.section-body
                 table.grid
@@ -113,7 +113,7 @@ html(lang="en")
           table.section
             tr
               td
-                img(src=`${apiUrl}/images/header-pelmel.png`, class="section-header big")
+                img(src=`${apiUrl}/images/header-pelmel.png`, class="section-header")
             tr
               td.section-body.margin
                 table.grid
@@ -138,7 +138,7 @@ html(lang="en")
           table.section
             tr
               td
-                img(src=`${apiUrl}/images/header-startup.png`, class="section-header big")
+                img(src=`${apiUrl}/images/header-startup.png`, class="section-header")
             tr
               td.section-body.margin
                 table.grid
@@ -198,7 +198,7 @@ html(lang="en")
       tr
         td.footer
           div.violet-bg
-            img(src=`${apiUrl}/images/contact-header.png`, class="section-header big")
+            img(src=`${apiUrl}/images/contact-header.png`, class="section-header")
             p.white-text Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na 
               a(href="http://") marketing@jic.cz
             table.socials
