--- a/index.pug
+++ b/index.pug
@@ -197,9 +197,9 @@ html(lang="en")
               img(src=`${apiUrl}/images/btn-side.png`)
       tr
         td.footer
-          div.violet-bg
-            img(src=`${apiUrl}/images/contact-header.png`, class="section-header")
-            p.white-text Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na 
+          div
+            img(src=`${apiUrl}/images/header-contact.png`, class="section-header")
+            p Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na 
               a(href="http://") marketing@jic.cz
             table.socials
               tr
@@ -218,7 +218,6 @@ html(lang="en")
                 td
                   a(href="http://") 
                     img(src=`${apiUrl}/images/tw.png`)
-          img(src=`${apiUrl}/images/noise-violet.png`)
   a(href="http://", class="unsub violet-text") Pro odhlášení z odběru newsletteru klikněte zde
 
 
