--- a/index.pug
+++ b/index.pug
@@ -197,27 +197,27 @@ html(lang="en")
               img(src=`${apiUrl}/images/btn-side.png`)
       tr
         td.footer
-          div
-            img(src=`${apiUrl}/images/header-contact.png`, class="section-header")
+          img(src=`${apiUrl}/images/header-footer.png`, class="section-header")
+          div.section-body.margin
             p Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na 
               a(href="http://") marketing@jic.cz
             table.socials
               tr
                 td
                   a(href="http://") 
-                    img(src=`${apiUrl}/images/fb.png`)
+                    img(src=`${apiUrl}/images/fb-dark.png`)
                 td
                   a(href="http://") 
-                    img(src=`${apiUrl}/images/in.png`)
+                    img(src=`${apiUrl}/images/in-dark.png`)
                 td
                   a(href="http://") 
-                    img(src=`${apiUrl}/images/ig.png`)
+                    img(src=`${apiUrl}/images/ig-dark.png`)
                 td
                   a(href="http://") 
-                    img(src=`${apiUrl}/images/yt.png`)
+                    img(src=`${apiUrl}/images/yt-dark.png`)
                 td
                   a(href="http://") 
-                    img(src=`${apiUrl}/images/tw.png`)
+                    img(src=`${apiUrl}/images/tw-dark.png`)
   a(href="http://", class="unsub violet-text") Pro odhlášení z odběru newsletteru klikněte zde
 
 
